# finql

./: .gitignore  Cargo.toml  README.md  Release_History.txt  sqlite  sqlx-data.json
.sqlx/: query-007429d648d7a2a8641469cb54222b28753d6b830096bf7b309d64697f878893.json  query-03c0cccaff0db036ebcc4a703f94e30402913d3ca2507feb75b1c3a81b36fd4e.json  query-0a94048d6413f79cc9fd875340d782bb257359f2483289d08577b4144d47192f.json  query-0aa2d5572dba82f079cf22ce3f5d126e652b341d3e08bca891a54afb1a1257b7.json  query-0c9e8192a07199a1834eab312334a3014f4695cfadcdeeb18c6b25d9429c5fed.json  query-0e5a52757b8a3c61ae2d747cca299804ece31c21ee016aebb602825cb30949d5.json  query-1487b837dd4ba264205a1d341659eca93055783ff2c395ab4831268a8f8e9f14.json  query-1cbbdea6fe78cfd2c7192c0379371769b3da2fcbd331901fc9243c6d568baa66.json  query-24c989fd415351c5176167cdaea6925f6ce4a39659d5d5d94050fae42ae1c93c.json  query-25d9f589a0b4626a121e90448da162ad25c784fd8a808bb88ab7e3231c6f0bbd.json  query-27ade8cc21fe1e34cdad4b0aa95053c195276774ba8997d569b61566feaeeea9.json  query-29d7dcc2b8042e655051f273e0124f2688268fe7ec524e315556e4b6b0520819.json  query-2d31ac82286e29a18b7e12d188dd40cd394a71dc9b11994eaf58d5e5ad2b1cf2.json  query-2fc6efc70b97b1af4429e8bf69eecf3b4e2faa407ed9ab7349f03664ce9115fe.json  query-2ff8c2ad3460a112990623d9642fbd4c7518b7474e968df718f0c39a7a8904d9.json  query-3d207bb8559ddc213e3f4d8bbb2dd98f270443cc008483acf1611e3b02dc6aef.json  query-43b1a71778d028e2d2772628288390288894858ef52127deb42c142cdcfa8c53.json  query-50fafcb34f36d749aa36865f6151f45f55921f7b8617e6d52342a42607a0e8b5.json  query-5525ce82deecc00996561f9e072cb8f347770cbd07fc7db0800a0707613cc17f.json  query-5a7e33be3071df651bc2eb14c397ee6fb9b56f75939027d278d6aeb4fbff3274.json  query-5db584dfe26f5eb524472c46911413849477e87b7677f806686e7e89ccd3c5f9.json  query-5e5c284b2154c8062b496e08b50173e651df60fe74fc0aee8697d411448e1641.json  query-5fb35ddc11376247f230b14808fd82585815f895f12055f8b638f0cedeaa211d.json  query-6a23ee7940d6851dc7eb064e1385b60bf895cc3564c6b1680fbffd5f67803196.json  query-6b92ff941fe692c55811052a94e762190e17404526d777be9d83f6ee2db1edb5.json  query-6d9badbf9202ee1bc8f236efe0aaf58b0a921beafb9f014b6a8f3bef518a17e5.json  query-707002a559e2eabbcbd75d70f3c9160f08c5eb80d68355f5ff4cbc7d245a362a.json  query-73012346fd7047fb02355fa1e71579fcc24c72a7fe1c626ab2ace16adabad7d9.json  query-77bfa54342b8ccc1169241ee8d47280c8aecc762ed0667b1daa6396c9d9da73f.json  query-822d5edb4ae161de1b0ddb8bbb059e151a8e456a65f94fbf9442b1f5893102e2.json  query-8d1430978f40631604b33cf0c5295e9d19e1b7db4d4a010b702e28981f1a6179.json  query-8d47870f48f1eaa4686c05aed42035049661632c57b560cb3eddaf85960c12ae.json  query-9da1a8383ec8d6b9cf2ac764dbb76e3da8559df0109452245d1170aa3e8e2b04.json  query-9e37810174d9acf06d9745f499eb5e9d4e51c9520d7175a26222acbd1cd12e50.json  query-a15d6dddda647bdc06668a5e84410d924f7cce05a78627d39eef14ae67fb49ab.json  query-a557ec310fb2a5d0dba9a51862ef18e0ff3e8070e97d932a60ea11d55174868b.json  query-a5e9c06317657888f24f261a9ddffef6c062d220f1fef50784c80e03c7cb4f52.json  query-a7ea5eaa7fb647a13c807d41738aa8da63193ca919db07ee6e9fb69a7c0b5130.json  query-a7f495ae4d420c39722a1a279811ad645808220e9bb84751e59c067f1b0b991a.json  query-aa1a4c780ff7fe737c424dbf3fc562dd59de82005cb6c4893e1f9aa47d78e43c.json  (+25 more)
database/: CreateTables_pg17.sql  clearTable.sql  finqlpg.sql  migrateToV11.sql
examples/: Euroboden_deb_bond.json  adding_period.rs  bond_comparison.rs  pg_quoter.rs  quotes_db.rs  sqlite_quotes.rs  sqlitedb.rs  store_object.rs  total_return.rs  transaction_db.rs  uk_settlement_calendar.rs
finql/: Cargo.toml  README.md
finql-data/: Cargo.toml
finql-data/src/: asset.rs  asset_handler.rs  cash_flow.rs  currency.rs  date_time_helper.rs  lib.rs  object_handler.rs  quote.rs  quote_handler.rs  stock.rs  transaction.rs  transaction_handler.rs
finql-postgres/: Cargo.toml  README.md  sqlx-data.json
finql-postgres/data/: finqlpg.sql
finql-postgres/src/: asset_handler.rs  lib.rs  object_handler.rs  quote_handler.rs  transaction_handler.rs
finql-sqlite/: Cargo.toml  README.md  sqlx-data.json
finql-sqlite/data/: test.db
finql-sqlite/src/: asset_handler.rs  lib.rs  object_handler.rs  quote_handler.rs  raw_transaction.rs  transaction_handler.rs
finql/examples/: adding_period.rs  bond_comparison.rs  pg_quoter.rs  photon_energy_bond.json  quotes_db.rs  store_object.rs  total_return.rs  transaction_db.rs
finql/src/: calendar.rs  date_time_helper.rs  fixed_income.rs  fx_rates.rs  helpers.rs  lib.rs  market.rs  period_date.rs  portfolio.rs  strategy.rs  time_period.rs  time_series.rs
finql/src/market_quotes/: alpha_vantage.rs  alpha_vantage_wrapper.rs  comdirect.rs  eod_historical_data.rs  guru_focus.rs  mod.rs  yahoo.rs
src/: asset.rs  bond.rs  calendar.rs  coupon_date.rs  currency.rs  data_handler.rs  day_adjust.rs  day_count_conv.rs  fixed_income.rs  fx_rates.rs  helpers.rs  lib.rs  macros.rs  market.rs  market_data_source.rs  period_date.rs  portfolio.rs  quote.rs  rates.rs  sqlite_handler.rs  strategy.rs  time_period.rs  time_periods.rs  time_series.rs  transaction.rs  utility.rs
src/data_handler/: asset_handler.rs  mod.rs  quote_handler.rs  transaction_handler.rs
src/datatypes/: asset.rs  asset_handler.rs  cash_flow.rs  currency.rs  date_time_helper.rs  mod.rs  object_handler.rs  quote.rs  quote_handler.rs  stock.rs  transaction.rs  transaction_handler.rs
src/market_quotes/: alpha_vantage.rs  alpha_vantage_wrapper.rs  comdirect.rs  eod_historical_data.rs  guru_focus.rs  mod.rs  yahoo.rs
src/memory_handler/: asset_handler.rs  mod.rs  quote_handler.rs  transaction_handler.rs
src/postgres/: asset_handler.rs  mod.rs  object_handler.rs  quote_handler.rs  transaction_handler.rs
src/postgres_handler/: asset_handler.rs  mod.rs  quote_handler.rs  transaction_handler.rs
src/sqlite_handler/: asset_handler.rs  helpers.rs  mod.rs  quote_handler.rs  raw_transaction.rs  transaction_handler.rs
