[package]
name = "finql"
version = "0.12.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A quantitative finance toolbox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/finql"
readme = "README.md"
keywords = ["finance", "bond", "period", "pricing"]
categories = ["date-and-time","mathematics"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
text_io = "0.1"
computus = "1.0"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
argmin = { version = "0.7.0", default-features = false }
yahoo_finance_api = "1.3"
gurufocus_api = "0.6"
rand = "0.8"
eodhistoricaldata_api =  "0.3.5"
alpha_vantage = { version="0.8", features=["reqwest-client"] } 
reqwest = "0.11"
scraper = "0.13"
csv = "1.1"
async-trait = "0.1"
tokio-compat-02 = "0.2"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "offline", "json" ] }
cal-calc = "0.1.3"

[dev-dependencies]
tokio = { version = "1.3", features =  ["full"] }
sqlx = { version="0.6", default-features = false, features = [ "runtime-tokio-rustls", "migrate", "postgres", "sqlite", "offline"] }
plotters = "^0.3.1"
pretty_env_logger = "0.4"
