[package]
name = "finql"
version = "0.8.0-dev"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A quantitative finance toolbox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/finql"
readme = "README.md"
keywords = ["finance", "calendar", "bond", "period", "pricing"]
categories = ["date-and-time","mathematics"]