[package]
name = "finql-data"
version = "0.1.2"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Internal crate used by finql implementing an async database abstraction layer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/finql"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.*", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
serde_json = "1.0"