[package]
name = "finql-postgres"
version = "0.2.3"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Internal crate used by finql implementing the postgres adaptor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/finql"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
finql-data = {version = "0.1", path = "../finql-data" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "offline" ] }
async-trait = "0.1"