[package]
name = "finql-sqlite"
version = "0.1.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "Internal crate used by finql implementing the sqlite adaptor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/finql"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = "0.24"
finql-data = { path="../finql-data" }
