[package]
name = "finql"
version = "0.10.0"
authors = ["Mark Beinker <mwb@quantlink.de>"]
edition = "2018"
description = "A quantitative finance toolbox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xemwebe/finql"
readme = "README.md"
keywords = ["finance", "calendar", "bond", "period", "pricing"]
categories = ["date-and-time","mathematics"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
text_io = "0.1"
computus = "1.0"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
argmin = "0.4"
yahoo_finance_api = "1.2"
gurufocus_api = "0.4"
rand = "0.8"
eodhistoricaldata_api =  "0.3.5"
alpha_vantage = "0.5"
reqwest = "0.11"
scraper = "0.12"
csv = "1.1"
async-trait = "0.1"
tokio-compat-02 = "0.2"
finql-data = { version="^0.2", path="../finql-data"}
log = "0.4"

[dev-dependencies]
tokio = { version = "1.3", features =  ["full"] }
finql-sqlite = { version="0.3", path="../finql-sqlite" }
sqlx = { version="0.5", default-features = false, features = [ "runtime-tokio-rustls", "migrate", "postgres", "sqlite", "offline"] }
plotters = "^0.3.1"
pretty_env_logger = "0.4"